examples/test/testpolicy13075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13075
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key5: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value44
          key38: value39
          key40: value42
      podSelector:
        matchLabels:
          key44: value36
